[project]
name = "qualtrics-one-shot-agent"
version = "0.1.0"
description = "Minimal reproducible Qualtrics-like one-shot survey completion agent for authorized research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.68.0",
    "playwright>=1.44.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qualtrics_one_shot_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
